# FormationControl

./: LICENSE  README.md  Untitled.ipynb  commit.sh  run.sh
balls_detector/: CMakeLists.txt  README.md  package.xml
balls_detector/config/: detect_param.yaml  tag_param.yaml  track_param.yaml
balls_detector/launch/: camera.launch  kinect.launch  tag_param.yaml  track_param.yaml
balls_detector/src/: Untitled.ipynb  ball_detector.py  balls_detector_node.cpp  cam_bridge.py  kinect_bridge.py  modify_camera_param.py  tagger.cpp  tracker.py
form_ctrl/: CMakeLists.txt  README.md  package.xml
form_ctrl/config/: form_ctrl_node.yml
form_ctrl/launch/: form_ctrl.launch
form_ctrl/src/: form_ctrl_node.cpp
reconstruction/: CMakeLists.txt  README.md  package.xml
reconstruction/config/: findNRT_config.yml
reconstruction/launch/: reconstruction.launch
reconstruction/src/: findNRT.cpp  modify_camera_param.py
sphero/: CMakeLists.txt  package.xml
sphero_bringup/launch/: teleop_xbox360.launch
sphero_bringup/scripts/: teleop.py
sphero_detector/: CMakeLists.txt  README.md  package.xml
sphero_detector/config/: detect_param.yaml  tag_param.yaml
sphero_detector/launch/: camera.launch
sphero_detector/src/: cam_bridge.py  sphero_detector_node.cpp  tagger.cpp  tracker.py
sphero_driver/: run.sh
sphero_node/: multi_sphero.launch
sphero_node/launch/: multi_sphero.launch
sphero_ros/: detector.m  run.sh
sphero_ros/sphero_run/: package.xml
sphero_ros/sphero_run/src/: Untitled.ipynb  Untitled1.ipynb  sphero_detect.py  sphero_move.py
sphero_run/: CMakeLists.txt
(+12 files in other folders)
