<?xml version="1.0"?>
<package>
  <name>sphero_run</name>
  <version>0.0.0</version>
  <description>The sphero_run package</description>

  <maintainer email="patlekano@gmail.com">Lekan</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>sphero_node</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>sphero_node</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
